--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Simple Js Slider</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="container">
+      <img class="img" src="img/road.jpg" alt="">
+      <div class="left">
+        <div class="right">
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
