style arrows positions

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <div id="container">
       <img class="img" src="img/road.jpg" alt="">
       <div class="left">
-        <div class="right">
-
-        </div>
+        <img src="img/arrow_left.png" alt="left">
+      </div>
+      <div class="right">
+          <img src="img/arrow_right.png" alt="right">
       </div>
     </div>
   </body>
