--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Simple Js Slider</title>
+    <script src="js/slider.js"type="text/javascript">
+
+    </script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div id="container">
-      <img class="img" src="img/road.jpg" alt="">
+      <img id="img" src="img/img1.jpg" alt="">
       <div class="left">
-        <img src="img/arrow_left.png" alt="left">
+        <img src="img/arrow_left.png" alt="left" onclick="slideJs(-1)">
       </div>
       <div class="right">
-          <img src="img/arrow_right.png" alt="right">
+          <img src="img/arrow_right.png" alt="right" onclick="slideJs(1)">
       </div>
     </div>
   </body>
